--- a/README
+++ b/README
@@ -29,6 +29,7 @@ history:
 0.8-20101214	- 	added caching of the generated overlay tiles
 0.81-20101215	-	added OpenLayers zoom query parameter compatibility and
 			nodepth parameter for old-style overlay (no zoom depth)
+0.83-20101228	-	added layer opacity			
 ===========================================================================
 Copyright (c) 2010 Very Furry / Martijn van Exel
 
